# JDSurfG

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  licence.md
doc/: UserManual.md  bibliography.bib  instruction.CN.aux  instruction.CN.out  instruction.CN.tex  instruction.CN.toc  instruction.EN.aux  instruction.EN.tex  instruction.EN.toc
example/: DSurfTomo.in  JSurfG.in  MOD  MOD.true
example1/: DSurfTomo.in  JointSG.in  MOD  MOD.true  run.sh
include/: IOFunction.hpp  JointTomo.hpp  Makefile  SurfaceWave.hpp  bkg_model.hpp  calsurf.hpp  const.hpp  coo_matrix.hpp  csr_matrix.hpp  defmod.hpp  delsph.hpp  empirical.hpp  fmm.hpp  gauleg.hpp  gaussian.hpp  gravmat.hpp  invparam.hpp  lsmr.hpp  nonlinear_opt.hpp  numerical.hpp  openmp.hpp  spherical.hpp  surfdisp.hpp  surftomo.hpp  tomography.hpp  tomography1.hpp  utils.hpp
src/: calsurf.f90  defmod.cpp  delsph.f90  empirical.f90  fmm.f90  gaussian.f90  lsmrModule.f90  lsmr_coo_matrix.mod  lsmrblasinterface.mod  lsmrdatamodule.mod  lsmrmodule.mod  mod3d.cpp  spherical.cpp  surfdisp96.f  surftime.cpp
src/JSurfGTomo/: CMakeLists.txt  JSurfGTomo.hpp  JSurfGtomo.cpp  io.cpp  main.cpp
src/Joint/: JointTomo.cpp  Makefile  main.cpp
src/JointTomo/: JointTomo.cpp  Makefile  main.cpp  test.cpp
src/SWD/: CMakeLists.txt  SurfaceWave.cpp  SurfaceWave.hpp  empirical.cpp  empirical.hpp  fmm.f90  fmst.f90  io.cpp  slegn96.f90  sregn96.f90  surfdisp.cpp  surfdisp96.f  swd.hpp
src/SurfaceWave/: Makefile  SurfaceWave.cpp  fmm.f90  fmmsph.mod  fmst.f90  globalp.mod  slegn96.f90  sphfmm.f90  sregn96.f90  surfdisp.cpp  surfdisp96.f  traveltime.mod
src/Surftomo/: CMakeLists.txt  Makefile  distance.mod  empirical.mod  fmmsph.mod  globalp.mod  lsmr_csr_matrix.mod  lsmrblasinterface.mod  lsmrdatamodule.mod  lsmrmodule.mod  main.cpp  surftomo.cpp  surftomo.hpp  test.cpp  traveltime.mod
src/gravity/: CMakeLists.txt  Makefile  gauleg.cpp  gauleg.hpp  gravity_module.hpp  gravmat.cpp  main.cpp  transform.cpp  transform.hpp
src/shared/: CMakeLists.txt  IOFunc.cpp  IOFunc.hpp  csr_matrix.cpp  csr_matrix.hpp  gaussian.cpp  gaussian.hpp  invparam.cpp  lsmrModule_csr.f90  parallel.cpp  parallel.hpp  smoothing.cpp  smoothing.hpp  spherical.cpp  spherical.hpp
src/surftomo/: Makefile  io.cpp  main.cpp  surftomo.cpp  surftomo.hpp
src/utils/: IOFunction.cpp  Makefile  bkg_model.cpp  delsph.f90  distance.mod  empirical.f90  empirical.mod  gauleg.cpp  gaussian.cpp  lsmrModule.f90  lsmrModule_csr.f90  spherical.cpp
test/fmst_deriv/: README.md  main.cpp  plot_fdm.sh
test/smooth/: main.cpp  plot_grad.sh  smooth.in
test/swd/: main.cpp  model.txt  plot_kernel.py
utils/: Makefile  generate_ckbd_model.py  gravity_forward.f90  interp.py  lcurve.py  out2init.py  syn_gravity.cpp  tune_L_curve.sh
utils/plot_scripts/: 01_get_grd.sh  02_plot_diff.sh  02_plot_profile.sh  03_plot_gravity.sh  parameters.sh
